[metadata]
name = glenn_has_range
version = 0.0.1
author = Robbie Hughes
author_email = rwhughes91@gmail.com
description = A small API for spotify playlists
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rwhughes91/glenn_has_range
project_urls =
    Bug Tracker = https://github.com/rwhughes91/glenn_has_range/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
